fixed z-index

--- a/css/curator.css
+++ b/css/curator.css
@@ -555,6 +555,7 @@ a:hover{
 	}
 
 	.footer{
+		z-index: 2;
 		top: 0;
 	}
 }
